kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: app
          image: mourajj/jonathan-golang-intview:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: migrations-volume
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: migrations-volume
          hostPath:
            path: /app/migrations
